--- a/appetizers.tex
+++ b/appetizers.tex
@@ -20,7 +20,7 @@ Serves 10
 Serve with olive oil, flaky salt, black pepper, arugula, parmesan shavings, capers, and fresh thyme leaves.
 \end{denserecipe}
 
-\begin{recipe}{Paneer on Tomato}{\tag{V}\totaltime{15 min}}
+\begin{recipe}{Paneer on Tomato}{\vegetarian\totaltime{15 min}}
 \begin{ingredients}
 2 ripe tomatoes
 salt and pepper
