--- a/breads_and_pancakes.tex
+++ b/breads_and_pancakes.tex
@@ -1,6 +1,6 @@
 \BeginCategoryTOC{Breads \& Pancakes}
 
-\begin{denserecipe}{All-Purpose Enriched Dough}{\tag{V}\totaltime{7 h}}
+\begin{denserecipe}{All-Purpose Enriched Dough}{\vegetarian\totaltime{7 h}}
 \begin{ingredients}
 250 g whole milk
 50 + 500 g flour
@@ -22,7 +22,7 @@ Makes enough for 2 loaves
 \end{steps}
 \end{denserecipe}
 
-\begin{recipe}{Banana Almond Pancakes}{\tag{V}\totaltime{20 min}}
+\begin{recipe}{Banana Almond Pancakes}{\vegetarian\totaltime{20 min}}
 \begin{ingredients}
 1 banana
 2 eggs
@@ -42,7 +42,7 @@ Makes 4 large pancakes
 Substitute half of almond flour with protein powder for fluffier pancakes.
 \end{recipe}
 
-\begin{recipe}{Cream Biscuits}{\tag{V}\preheat{\celsius{200}}\totaltime{25 min}}
+\begin{recipe}{Cream Biscuits}{\vegetarian\preheat{\celsius{200}}\totaltime{25 min}}
 \begin{ingredients}
 2 dl flour
 2 tsp baking powder
@@ -82,7 +82,7 @@ Makes 4 to 6 large crepes
 Fill sweet crepes with sugar and lemon juice, or whipped cream and berries; savory crepes with mushrooms and ricotta, or ham, cheese and fried eggs.
 \end{recipe}
 
-\begin{recipe}{Gullichsenin Letut}{\tag{V}\totaltime{1 h 10 min}}
+\begin{recipe}{Gullichsenin Letut}{\vegetarian\totaltime{1 h 10 min}}
 \begin{ingredients}
 4 dl flour
 1 tsp baking powder
@@ -105,7 +105,7 @@ Serves 6
 Serve with: manchego and berries / gouda and fig jam / sour cream and lemon curd / sugar and lemon juice
 \end{recipe}
 
-\begin{denserecipe}{Hamburger Buns}{\tag{V}\preheat{\celsius{180}}\totaltime{2 h 30 min}}
+\begin{denserecipe}{Hamburger Buns}{\vegetarian\preheat{\celsius{180}}\totaltime{2 h 30 min}}
 \begin{ingredients}
 \reciperef{All-Purpose Enriched Dough}
 1 egg, beaten
@@ -123,7 +123,7 @@ Makes 10 buns
 \end{steps}
 \end{denserecipe}
 
-\begin{denserecipe}{Low-Knead Bread}{\tag{VG}\totaltime{14 h to 3 days}}
+\begin{denserecipe}{Low-Knead Bread}{\vegetarian\totaltime{14 h to 3 days}}
 \begin{ingredients}
 400 g bread flour
 8 g salt (2 tsp kosher)
@@ -142,7 +142,7 @@ This is a variation on \reciperef{No-Knead Bread} with additional folds and high
 \end{steps}
 \end{denserecipe}
 
-\begin{denserecipe}{No-Knead Bread}{\tag{VG}\preheat{\celsius{260}}\totaltime{14 h}}
+\begin{denserecipe}{No-Knead Bread}{\vegetarian\preheat{\celsius{260}}\totaltime{14 h}}
 \begin{ingredients}
 400 g bread flour
 8 g salt (2 tsp kosher)
@@ -163,7 +163,7 @@ This is a variation on \reciperef{No-Knead Bread} with additional folds and high
 \end{steps}
 \end{denserecipe}
 
-\begin{recipe}{Potato Flat Bread}{\tag{V}\preheat{\celsius{260}}\totaltime{30 min}}
+\begin{recipe}{Potato Flat Bread}{\vegetarian\preheat{\celsius{260}}\totaltime{30 min}}
 \begin{ingredients}
 3 dl potato puree
 1 1/2 tsp kosher salt
@@ -181,7 +181,7 @@ Serves 4
 \end{steps}
 \end{recipe}
 
-\begin{denserecipe}{Tangzhong Oat and Carrot Rolls}{\tag{V}\preheat{\celsius{190}}\totaltime{2 h}}
+\begin{denserecipe}{Tangzhong Oat and Carrot Rolls}{\vegetarian\preheat{\celsius{190}}\totaltime{2 h}}
 \begin{ingredients}
 35 g + 415 g flour
 170 g + 170 g milk
@@ -205,7 +205,7 @@ Makes enough to fill 2 baking sheets
 \end{steps}
 \end{denserecipe}
 
-\begin{recipe}{Tangzhong Pain de Mie}{\tag{V}\preheat{\celsius{180}}\totaltime{3h 30 min}}
+\begin{recipe}{Tangzhong Pain de Mie}{\vegetarian\preheat{\celsius{180}}\totaltime{3h 30 min}}
 \begin{ingredients}
 \ihead{Tangzhong}
 30 g flour
