--- a/casseroles_and_savory_pies.tex
+++ b/casseroles_and_savory_pies.tex
@@ -1,6 +1,6 @@
 \BeginCategoryTOC{Casseroles \& Savory Pies}
 
-\begin{denserecipe}{Freeze \& Bake Chicken Pot Pies}{\preheat{\celsius{200}}\totaltime{1 h 30 min}}
+\begin{denserecipe}{Freezer Chicken Pot Pies}{\preheat{\celsius{200}}\totaltime{1 h 30 min}}
 \begin{ingredients}
 1/3 cup butter
 1 onion, diced
@@ -28,7 +28,7 @@ Makes 6 small pies
 \end{steps}
 \end{denserecipe}
 
-\begin{denserecipe}{Heirloom Tomato Tart}{\tag{V}\preheat{\celsius{190}}\totaltime{1 h 30 min}}
+\begin{denserecipe}{Heirloom Tomato Tart}{\vegetarian\preheat{\celsius{190}}\totaltime{1 h 30 min}}
 \begin{ingredients}
 \reciperef{Simple Pie Crust}
 500 g ripe heirloom tomatoes
@@ -114,7 +114,7 @@ Serves 4
 \end{steps}
 \end{denserecipe}
 
-\begin{recipe}{Onion, Gruyere and Tomato Tart}{\preheat{\celsius{180}}\totaltime{1 h}}
+\begin{recipe}{Onion, Gruyere and Tomato Tart}{\vegetarian\preheat{\celsius{180}}\totaltime{1 h}}
 \begin{ingredients}
 \mbox{\reciperef{Vodka Pie Dough}}
 2 lb onions, caramelized
@@ -132,7 +132,7 @@ Serves 6 to 8
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{French Onion Lentils and Farro}{\tag{V}\preheat{\celsius{190}}\totaltime{1 hr 15 min}}
+\begin{recipe}{French Onion Lentils and Farro}{\vegetarian\preheat{\celsius{190}}\totaltime{1 hr 15 min}}
 \begin{ingredients}
 2/3 batch \reciperef{Fast Caramelized Onions}
 2 cloves garlic, minced
@@ -182,7 +182,7 @@ Serves 6
 \end{steps}
 \end{denserecipe}
 
-\begin{denserecipe}{Roman Chicken with Potatoes}{\preheat{\celsius{220}}\totaltime{1 h}}
+\begin{denserecipe}{Blonde Chicken Cacciatore}{\preheat{\celsius{220}}\totaltime{1 h}}
 \begin{ingredients}
 2 lb chicken thighs
 kosher salt
