--- a/components.tex
+++ b/components.tex
@@ -1,6 +1,6 @@
 \BeginCategoryTOC{Components}
 
-\begin{recipe}{Braised Peppers and Onions}{\tag{VG}\totaltime{40 min}}
+\begin{recipe}{Braised Peppers and Onions}{\vegetarian\totaltime{40 min}}
 \begin{ingredients}
 2 tbsp oil
 3 large bell peppers
@@ -20,7 +20,7 @@ Serves 4--6
 Serve in hot dogs, sandwiches, or as a side.
 \end{recipe}
 
-\begin{recipe}{Fast Caramelized Onions}{\tag{VG}\totaltime{30 min}}
+\begin{recipe}{Fast Caramelized Onions}{\vegetarian\totaltime{30 min}}
 \begin{ingredients}
 3 lb onions, sliced \ibreak through root
 3/4 cup water
@@ -38,7 +38,7 @@ Serve in hot dogs, sandwiches, or as a side.
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Hot Green Spice Blend}{\tag{VG}\totaltime{5 min}}
+\begin{recipe}{Hot Green Spice Blend}{\vegetarian\totaltime{5 min}}
 \begin{ingredients}
 2 parts freeze dried chives
 2 parts freeze dried shallots
@@ -72,7 +72,7 @@ Serves 4
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Gazpacho Dressing}{\tag{VG}\totaltime{15 min}}
+\begin{recipe}{Gazpacho Dressing}{\vegetarian\totaltime{15 min}}
 \begin{ingredients}
 1/2 cucumber, peeled
 1 1/2 bell pepper
