--- a/desserts.tex
+++ b/desserts.tex
@@ -1,6 +1,6 @@
 \BeginCategoryTOC{Desserts}
 
-\begin{recipe}{Fruit Posset}{\tag{V}\totaltime{4 h 45 min}}
+\begin{recipe}{Fruit Posset}{\vegetarian\totaltime{4 h 45 min}}
 \begin{ingredients}
 \ihead{Puree}
 2 cups diced fruit
@@ -26,7 +26,7 @@ Serves 4. Great with berries or stone fruit.
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Peaches in Muscat}{\tag{VG}\totaltime{2 h}}
+\begin{recipe}{Peaches in Muscat}{\vegetarian\totaltime{2 h}}
 \begin{ingredients}
 4 ripe peaches
 1/2 cup sweet Muscat
@@ -42,7 +42,7 @@ If peaches are hard to peel, loosen skins in boiling water.
 Serve alone or with whipped cream or ice cream.
 \end{recipe}
 
-\begin{recipe}{Tart Panna Cotta}{\tag{V}\totaltime{4 h 20 min}}
+\begin{recipe}{Tart Panna Cotta}{\vegetarian\totaltime{4 h 20 min}}
 \begin{ingredients}
 1/2 envelope gelatin, just over 1 tsp
 3 tbsp water
@@ -66,7 +66,7 @@ Serves 4
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Champagne Sabayon}{\tag{V}\totaltime{15 min}}
+\begin{recipe}{Champagne Sabayon}{\vegetarian\totaltime{15 min}}
 \begin{ingredients}
 3 yolks
 75 g sugar
@@ -86,7 +86,7 @@ Serves 4
 \end{steps}
 \end{recipe}
 
-\begin{denserecipe}{Jello Pudding}{\tag{V}\totaltime{2 h}}
+\begin{denserecipe}{Jello Pudding}{\vegetarian\totaltime{2 h}}
 \begin{ingredients}
 1 cup milk
 4 tsp cornstarch
@@ -116,7 +116,7 @@ Serves 2
 \end{steps}
 \end{denserecipe}
 
-\begin{recipe}[Under development]{Italian Meringue}{\tag{V}\totaltime{20 min}}
+\begin{recipe}[Under development]{Italian Meringue}{\vegetarian\totaltime{20 min}}
 \begin{ingredients}
 100-180 g sugar, less for softer meringue
 enough water to moisten sugar
@@ -133,7 +133,7 @@ Makes 2 cups
 \end{steps}
 \end{recipe}
 
-\begin{recipe}[Under development]{Zabaglione}{\tag{V}\totaltime{30 min}}
+\begin{recipe}[Under development]{Zabaglione}{\vegetarian\totaltime{30 min}}
 \begin{ingredients}
 3 egg yolks
 40 g sugar
@@ -152,7 +152,7 @@ Makes 1 cup
 \end{steps}
 \end{recipe}
 
-\begin{recipe}[Under development]{Semifreddo}{\tag{V}\totaltime{9 h}}
+\begin{recipe}[Under development]{Semifreddo}{\vegetarian\totaltime{9 h}}
 \begin{ingredients}
 2 cups \reciperef{Italian Meringue}
 1 cup \reciperef{Zabaglione}
@@ -173,3 +173,27 @@ Serves 8
     \item Freeze overnight
 \end{steps}
 \end{recipe}
+
+\begin{denserecipe}{Banana Brûlée Boats}{\vegetarian\totaltime{3 h 15 min}}
+\begin{ingredients}
+2 bananas
+sugar
+splash of dark rum
+1/2 l coconut milk
+1/2 tsp vanilla extract
+30 g cornstarch
+\end{ingredients}
+\nextcolumn
+Serves 2
+\begin{steps}
+    \item Slice off top third of bananas to make boats
+    \item Pull out flesh and caramelize in a pan with a sprinkling of sugar
+    \item Deglaze with rum and optionally flambe
+    \item Add coconut milk and vanilla extract
+    \item Mash bananas and simmer for 5 minutes
+    \item Pass through a sieve
+    \item Whisk in cornstarch and cook until thickened
+    \item Fill skins and refrigerate for 3 hours
+    \item Brulee tops with sugar right before serving
+\end{steps}
+\end{denserecipe}
