--- a/doughs_and_batters.tex
+++ b/doughs_and_batters.tex
@@ -1,6 +1,6 @@
 \BeginCategoryTOC{Doughs \& Batters}
 
-\begin{denserecipe}{Choux Pastry}{\tag{V}\preheat{\celsius{200}}\totaltime{20 min}}
+\begin{denserecipe}{Choux Pastry}{\vegetarian\preheat{\celsius{200}}\totaltime{20 min}}
 \begin{ingredients}
 1 cup (235 g) water or milk
 6 tbsp (85 g) unsalted butter, diced
@@ -24,7 +24,7 @@ Makes 18 puffs
 Can wait for 2 hours in piping bag before baking.
 \end{denserecipe}
 
-\begin{recipe}{Olive Oil Tart Shell}{\tag{VG}\preheat{\celsius{180}}\totaltime{45 min}}
+\begin{recipe}{Olive Oil Tart Shell}{\vegetarian\preheat{\celsius{180}}\totaltime{45 min}}
 \begin{ingredients}
 1 1/2 cups flour
 5 tbsp sugar
@@ -42,7 +42,7 @@ Makes a 9-inch tart
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Simple Pie Crust}{\tag{V}\totaltime{1 h 15 min}}
+\begin{recipe}{Simple Pie Crust}{\vegetarian\totaltime{1 h 15 min}}
 \begin{ingredients}
 150 g flour
 1/4 tsp salt
@@ -60,7 +60,7 @@ Makes enough for one 9-inch pie
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Vodka Pie Dough}{\totaltime{1 h}}
+\begin{recipe}{Vodka Pie Dough}{\vegetarian\totaltime{1 h}}
 \begin{ingredients}
 2 1/2 cups flour
 1 tsp table salt
@@ -81,7 +81,7 @@ Fills two 11-inch tart pans
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Whole Wheat Olive Oil Pie Crust}{\tag{VG}\totaltime{1 h 15 min}}
+\begin{recipe}{Whole Wheat Olive Oil Pie Crust}{\vegetarian\totaltime{1 h 15 min}}
 \begin{ingredients}
 3/4 cup water
 2 tsp vinegar or lemon juice
@@ -103,7 +103,7 @@ Fills two 9--10-inch tart pans
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Yeasted Pie Crust}{\tag{V}\totaltime{1 h 30 min}}
+\begin{recipe}{Yeasted Pie Crust}{\vegetarian\totaltime{1 h 30 min}}
 \begin{ingredients}
 1/2 cup warm water
 1 egg, warm
