--- a/pasta_and_noodles.tex
+++ b/pasta_and_noodles.tex
@@ -29,7 +29,7 @@
 \end{paracol}
 \end{densecard}
 
-\begin{recipe}{Lighter Fettucine Alfredo}{\tag{V}\totaltime{30 min}}
+\begin{recipe}{Lighter Fettucine Alfredo}{\vegetarian\totaltime{30 min}}
 \begin{ingredients}
 140 g parmesan
 2 tbsp heavy cream
@@ -54,7 +54,7 @@ Serves 4
 \end{steps}
 \end{recipe}
 
-\begin{densecard}{Noodles in Pan Fried Sauce}{\totaltime{20 min}}
+\begin{densecard}{Noodle Stir-Fries}{\totaltime{20 min}}
 \begin{steps}
     \item Stir fry and simmer ingredients in order, leaving garnishes for plating
     \item Meanwhile, boil noodles and then toss with the sauce, plate and garnish
@@ -118,7 +118,7 @@ Serves 4
 \end{steps}
 \end{recipe}
 
-\begin{denserecipe}{Fresh Cucumber Pasta}{\tag{V}\totaltime{15 min}}
+\begin{denserecipe}{Fresh Cucumber Pasta}{\vegetarian\totaltime{15 min}}
 \begin{ingredients}
 250 g spinach fettuccine
 1 dl basil or mint
@@ -146,7 +146,7 @@ Serves 4
 \end{steps}
 \end{denserecipe}
 
-\begin{denserecipe}{Porcini Ragù}{\tag{V}\totaltime{45 min}}
+\begin{denserecipe}{Porcini Ragù}{\vegetarian\totaltime{45 min}}
 \begin{ingredients}
 40 g dried porcinies
 boiling water
