--- a/patisserie.tex
+++ b/patisserie.tex
@@ -1,6 +1,6 @@
 \BeginCategoryTOC{Pâtisserie}
 
-\begin{recipe}{Pulla}{\tag{V}\preheat{\celsius{220}}\totaltime{1h 15 min}}
+\begin{recipe}{Pulla}{\vegetarian\preheat{\celsius{220}}\totaltime{1h 15 min}}
 \begin{ingredients}
 5 dl whole milk, warm
 50 g fresh yeast or 15 g dry
@@ -23,7 +23,7 @@
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Pannukakku}{\tag{V}\preheat{\celsius{200}}\totaltime{1 h 20 min}}
+\begin{recipe}{Pannukakku}{\vegetarian\preheat{\celsius{200}}\totaltime{1 h 20 min}}
 \begin{ingredients}
 4 dl flour
 1/2-1 dl sugar
@@ -46,7 +46,7 @@ Serves 6 to 8
 \end{steps}
 \end{recipe}
 
-\begin{denserecipe}{Bilberry Oat Pie}{\tag{V}\preheat{\celsius{175}}\totaltime{1 h}}
+\begin{denserecipe}{Bilberry Oat Pie}{\vegetarian\preheat{\celsius{175}}\totaltime{1 h}}
 \begin{ingredients}
 100 g butter
 3/4 dl sugar
@@ -72,7 +72,7 @@ Serves 8
 \end{steps}
 \end{denserecipe}
 
-\begin{denserecipe}{Spiced Berry Pie}{\tag{V}\preheat{\celsius{200}}\totaltime{1 h}}
+\begin{denserecipe}{Spiced Berry Pie}{\vegetarian\preheat{\celsius{200}}\totaltime{1 h}}
 \begin{ingredients}
 100 g butter
 1 + 1/2 dl sugar
@@ -100,7 +100,7 @@ Serves 8
 \end{steps}
 \end{denserecipe}
 
-\begin{recipe}{Oatmeal Pannukakku}{\tag{V}\preheat{\celsius{200}}\totaltime{35 min}}
+\begin{recipe}{Oatmeal Pannukakku}{\vegetarian\preheat{\celsius{200}}\totaltime{35 min}}
 \begin{ingredients}
 2 dl oatmeal
 2 dl milk
@@ -123,7 +123,7 @@ Serves 4
 \end{steps}
 \end{recipe}
 
-\begin{denserecipe}{Spiced Fruit Torte}{\tag{V}\preheat{\celsius{180}}\totaltime{1 h 15 min}}
+\begin{denserecipe}{Spiced Fruit Torte}{\vegetarian\preheat{\celsius{180}}\totaltime{1 h 15 min}}
 \begin{ingredients}
 1/2 cup salted butter
 3/4 to 1 cup sugar
@@ -180,7 +180,7 @@ Makes 8 to 10 small pancakes
 Serve with \reciperef{Blueberry Syrup}.
 \end{denserecipe}
 
-\begin{recipe}{Lemon--Olive Oil Tart}{\tag{V}\preheat{\celsius{180}}\totaltime{1 h 15 min}}
+\begin{recipe}{Lemon--Olive Oil Tart}{\vegetarian\preheat{\celsius{180}}\totaltime{1 h 15 min}}
 \begin{ingredients}
 \reciperef{Olive Oil Tart Shell}
 1 cup sugar
@@ -234,7 +234,7 @@ Serves 8
 Serve with powdered sugar, rum whipped cream.
 \end{denserecipe}
 
-\begin{denserecipe}{Protein Banana Bread}{\tag{V}\preheat{\celsius{180}}\totaltime{2 h}}
+\begin{denserecipe}{Protein Banana Bread}{\vegetarian\preheat{\celsius{180}}\totaltime{2 h}}
 \begin{ingredients}
 1 1/2 cups bananas
 1 1/2 cups greek yogurt
