--- a/pescatarian_mains.tex
+++ b/pescatarian_mains.tex
@@ -25,7 +25,7 @@ Serves 4
 Serve with \reciperef{Soy Reduction} over rice.
 \end{recipe}
 
-\begin{denserecipe}{Egg and Tomato}{\tag{V}\totaltime{15 min}}
+\begin{denserecipe}{Egg and Tomato}{\vegetarian\totaltime{15 min}}
 \begin{ingredients}
 4 eggs
 1/2 tsp kosher salt
@@ -52,7 +52,7 @@ Serves 2
 \end{steps}
 \end{denserecipe}
 
-\begin{denserecipe}{Mushroom Strogaonoff}{\tag{V}\totaltime{30 min}}
+\begin{denserecipe}{Mushroom Strogaonoff}{\vegetarian\totaltime{30 min}}
 \begin{ingredients}
 1 onion, finely diced
 1 1/2 lb mixed mushrooms, sliced
@@ -177,7 +177,7 @@ Serves 4
 \end{steps}
 \end{denserecipe}
 
-\begin{denserecipe}{Roasted Vegetables and Mozzarella}{\preheat{\celsius{220}}\totaltime{1 h}}
+\begin{denserecipe}{Roasted Vegetables and Mozzarella}{\vegetarian\preheat{\celsius{220}}\totaltime{1 h}}
 \begin{ingredients}
 1 1/2 lb carrots, peeled
 4 shallots, peeled
@@ -205,7 +205,7 @@ Serves 4
 \end{steps}
 \end{denserecipe}
 
-\begin{denserecipe}{Tomato Egg Drop}{\tag{V}\totaltime{30 min}}
+\begin{denserecipe}{Tomato Egg Drop}{\vegetarian\totaltime{30 min}}
 \begin{ingredients}
 3 large eggs, beaten
 neutral oil
@@ -275,7 +275,7 @@ Garnish with scallion and serve with white rice.
 \end{paracol}
 \end{densecard}
 
-\begin{recipe}{Crispy Herbed Goat Cheese}{\preheat{\celsius{250}}\totaltime{1 h 20 min}}
+\begin{recipe}{Crispy Goat Cheese}{\preheat{\celsius{250}}\totaltime{1 h 20 min}}
 \begin{ingredients}
 200 g panko bread crumbs
 550 g goat cheese
@@ -297,7 +297,7 @@ Serves 6
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Crispy Halloumi and Beans}{\tag{V}\totaltime{30 min}}
+\begin{recipe}{Crispy Halloumi and Beans}{\vegetarian\totaltime{30 min}}
 \begin{ingredients}
 olive oil
 1 lb cherry tomatoes
