--- a/porridges_and_grain_bowls.tex
+++ b/porridges_and_grain_bowls.tex
@@ -1,6 +1,6 @@
 \BeginCategoryTOC{Porridges \& Grain Bowls}
     
-\begin{recipe}{Genius Oatmeal}{\tag{V}\totaltime{25 min}}
+\begin{recipe}{Genius Oatmeal}{\vegetarian\totaltime{25 min}}
 \begin{ingredients}
 2 cups water
 1/2 cup rolled oats
@@ -19,7 +19,7 @@ Serves 2
 \end{steps}
 \end{recipe}
 
-\begin{denserecipe}{Pressure Cooker Miso Risotto}{\tag{VG}\totaltime{25 min}}
+\begin{denserecipe}{Pressure Cooker Miso Risotto}{\vegetarian\totaltime{25 min}}
 \begin{ingredients}
 6 tbsp olive oil
 1 shallot, minced
@@ -99,7 +99,7 @@ Serves 4
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Sabudana Khichdi}{\tag{V}\totaltime{4 h 15 min}}
+\begin{recipe}{Sabudana Khichdi}{\vegetarian\totaltime{4 h 15 min}}
 \begin{ingredients}
 1 cup tapioca pearls, rinsed (sabudana)
 1/4 cup peanuts
