--- a/retired.tex
+++ b/retired.tex
@@ -1,5 +1,5 @@
 % This was too sweet
-\begin{recipe}{Toll House Chocolate Chip Cookies}{\tag{V}\preheat{\fahrenheit{375}}\totaltime{30 min}}
+\begin{recipe}{Toll House Chocolate Chip Cookies}{\vegetarian\preheat{\fahrenheit{375}}\totaltime{30 min}}
 \begin{ingredients}
 1 cup + 2 tbsp flour
 1/2 tsp baking soda
@@ -25,7 +25,7 @@ Makes 30 cookies
 \end{recipe}
 
 % Came out too thick
-\begin{recipe}{Strong Christmas Mustard}{\tag{V}\totaltime{20 min}}
+\begin{recipe}{Strong Christmas Mustard}{\vegetarian\totaltime{20 min}}
 \begin{ingredients}
 113 g Colman's mustard powder
 85 g sugar
@@ -95,7 +95,7 @@ Serves 4
 \end{denserecipe}
 
 % Have a newer recipe
-\begin{recipe}{Saaristolaisleipä}{\tag{V}\preheat{\celsius{175}}\totaltime{3h 30 min}}
+\begin{recipe}{Saaristolaisleipä}{\vegetarian\preheat{\celsius{175}}\totaltime{3h 30 min}}
 \begin{ingredients}
 3 tsp instant yeast
 1 1/2 dl beer malts
@@ -233,7 +233,7 @@ Serves 8
 \end{denserecipe}
 
 % Not that good
-\begin{recipe}{Cheesy Bean Bake}{\tag{V}\preheat{\fahrenheit{475}}\totaltime{20 min}}
+\begin{recipe}{Cheesy Bean Bake}{\vegetarian\preheat{\fahrenheit{475}}\totaltime{20 min}}
 \begin{ingredients}
 2 tbsp olive oil
 3 cloves garlic, thinly sliced
