--- a/salads_and_cold_preparations.tex
+++ b/salads_and_cold_preparations.tex
@@ -1,6 +1,6 @@
 \BeginCategoryTOC{Salads \& Cold Preparations}
 
-\begin{denserecipe}{Classic Chicken Salad}{\totaltime{2 h}}
+\begin{denserecipe}{American Chicken Salad}{\totaltime{2 h}}
 \begin{ingredients}
 1 3/4 lb chicken breasts
 salt and black pepper
@@ -55,10 +55,10 @@ Good herbs: tarragon, parsley, dill and chives.
 \item Add cooled baked salmon and mix thoroughly
 \item Chill for at least 4 hours
 \end{steps}
-Use as filling for sandwiches, cream puffs or crepes. 
+Use in sandwiches, profiteroles or \reciperef{Crepes}. 
 \end{denserecipe}
 
-\begin{recipe}{Snap Pea-Chicken Salad}{\totaltime{40 min}}
+\begin{recipe}{Snap Pea and Chicken Salad}{\totaltime{40 min}}
 \begin{ingredients}
 1 boneless, skinless chicken breast
 1 lb sugar snap peas
@@ -75,7 +75,7 @@ Serves 2
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Carrot Salad}{\tag{V}\totaltime{15 min}}
+\begin{recipe}{Carrot Salad}{\vegetarian\totaltime{15 min}}
 \begin{ingredients}
 1 cup pineapple or orange pieces
 1/2 cup golden raisins
@@ -95,7 +95,7 @@ Serves 4
 Ideally refrigerate for 1 hour before serving.
 \end{recipe}
 
-\begin{denserecipe}{Spicy Corn Salad}{\tag{V}\totaltime{15 min}}
+\begin{denserecipe}{Spicy Corn Salad}{\vegetarian\totaltime{15 min}}
 \begin{ingredients}
 2+1 tbsp olive oil
 2 tbsp lime juice
@@ -120,7 +120,7 @@ Serves 4
 Garnish with more cilantro.
 \end{denserecipe}
 
-\begin{recipe}{Orange and Radish Salad}{\tag{VG}\totaltime{15 min}}
+\begin{recipe}{Orange and Radish Salad}{\vegetarian\totaltime{15 min}}
 \begin{ingredients}
 1/3 cup lemon juice (about 2 lemons)
 2 tbsp sugar
@@ -141,7 +141,7 @@ Serves 4
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Egg Salad for Tea Sandwiches}{\tag{V}\totaltime{15 min}}
+\begin{recipe}{Egg Salad for Tea Sandwiches}{\vegetarian\totaltime{15 min}}
 \begin{ingredients}
 2 hard boiled eggs
 1 tbsp mayonnaise
@@ -163,7 +163,7 @@ Serves 2
 \end{steps}
 \end{recipe}
 
-\begin{densecard}{Potato Salads}{\totaltime{40 min}}
+\begin{densecard}{Potato Salads}{\vegetarian\totaltime{40 min}}
 \begin{densesteps}
     \item Bring to boil 1 1/2 lb cut up potatoes, 1 tbsp salt, 1/2 tbsp vinegar and 3 cups tepid water in saucepan and cook until fully tender, about 17 minutes
     \item Drain and toss with 1 tbsp vinegar; spread out and cool for 10 minutes
@@ -209,7 +209,7 @@ Serves 2
 \end{paracol}
 \end{densecard}
 
-\begin{recipe}{Summer Corn and Tomato Salad}{\tag{VG}\totaltime{15 min}}
+\begin{recipe}{Summer Corn and Tomato Salad}{\vegetarian\totaltime{15 min}}
 \begin{ingredients}
 5 ears corn in husks
 1 pint cherry tomatoes, halved
@@ -231,7 +231,7 @@ Serves 6
 \end{steps}
 \end{recipe}
 
-\begin{denserecipe}{Orzo, Lentil and Zucchini Salad}{\tag{VG}\totaltime{40 min}}
+\begin{denserecipe}{Orzo, Lentil and Zucchini Salad}{\vegetarian\totaltime{40 min}}
 \begin{ingredients}
 1 cup lentils
 1 cup orzo
@@ -257,7 +257,7 @@ Serves 6
 \end{steps}
 \end{denserecipe}
 
-\begin{denserecipe}{Brussels Sprouts Caesar Salad}{\tag{V}\preheat{\celsius{220}}\totaltime{35 min}}
+\begin{denserecipe}{Brussels Sprouts Caesar Salad}{\vegetarian\preheat{\celsius{220}}\totaltime{35 min}}
 \begin{ingredients}
 2 lb brussels sprouts, trimmed, 3/4 halved and 1/4 thinly sliced
 1/3 cup + 3 tbsp olive oil
@@ -277,7 +277,7 @@ Serves 4 to 6
 \end{steps}
 \end{denserecipe}
 
-\begin{denserecipe}{Cucumber and Avocado Salad}{\totaltime{10 min}}
+\begin{denserecipe}{Cucumber and Avocado Salad}{\vegetarian\totaltime{10 min}}
 \begin{ingredients}
 1/4 cup \reciperef{Miso-Sesame Vinaigrette}
 1/2 tsp red-pepper flakes
@@ -295,7 +295,7 @@ Serves 4
 \end{steps}
 \end{denserecipe}
 
-\begin{denserecipe}{Esquites Salad}{\tag{V}\totaltime{20 min}}
+\begin{denserecipe}{Esquites Salad}{\vegetarian\totaltime{20 min}}
 \begin{ingredients}
 2 tbsp oil
 4 ears fresh corn kernels
@@ -320,11 +320,11 @@ Serves 4
 \end{steps}
 \end{denserecipe}
 
-\begin{denserecipe}{Beet and Goat Cheese Salad}{\tag{V}\totaltime{15 min}}
+\begin{recipe}{Beet and Goat Cheese Salad}{\vegetarian\totaltime{15 min}}
 \begin{ingredients}
-\reciperef{Roasted Balsamic Beets}
-4 pucks \reciperef{Crispy Herbed Goat Cheese}
-1/4 cup \reciperef{Blonde Balsamic Vinaigrette}
+\reciperef{Balsamic Beets}
+4 pucks \reciperef{Crispy Goat Cheese}
+1/4 cup \reciperef{Blonde Vinaigrette}
 3 cups chopped frisee, escarole, lettuces
 1 cup shaved fennel
 dill fronds
@@ -338,9 +338,9 @@ Serves 2
 \item Add salt and pistachios
 \item Top with beets, goat cheese, more dressing and more pistachios
 \end{steps}
-\end{denserecipe}
+\end{recipe}
 
-\begin{recipe}{Gazpacho Pasta Salad}{\tag{VG}\totaltime{1 day}}
+\begin{recipe}{Gazpacho Pasta Salad}{\vegetarian\totaltime{1 day}}
 \begin{ingredients}
 8 cups \reciperef{Gazpacho Dressing}
 1 lb elbow macaroni
@@ -350,7 +350,7 @@ Serves 2
 salt and pepper
 \end{ingredients}
 \nextcolumn
-Serves
+Serves 8
 \begin{steps}
     \item Cook macaroni in salted water and drain well
     \item Mix macaroni and \reciperef{Gazpacho Dressing}
@@ -361,7 +361,7 @@ Serves
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Tzatziki Chickpea Salad}{\tag{V}\totaltime{15 min}}
+\begin{recipe}{Tzatziki Chickpea Salad}{\vegetarian\totaltime{15 min}}
 \begin{ingredients}
 1 cup greek yogurt
 1 clove garlic, grated
