--- a/sandwiches_and_flatbreads.tex
+++ b/sandwiches_and_flatbreads.tex
@@ -48,7 +48,7 @@ Serves 1
 \end{steps}
 \end{recipe}
 
-\begin{denserecipe}{Vegetarian Reuben Sandwich}{\tag{V}\totaltime{15 min}}
+\begin{denserecipe}{Vegetarian Reuben}{\vegetarian\totaltime{15 min}}
 \begin{ingredients}
 1/2 cup sauerkraut
 1 tbsp mayonnaise
