--- a/sauces_and_marinades.tex
+++ b/sauces_and_marinades.tex
@@ -1,6 +1,6 @@
 \BeginCategoryTOC{Sauces \& Marinades}
 
-\begin{recipe}{Pesto}{\tag{V}\totaltime{10 min}}
+\begin{recipe}{Pesto}{\vegetarian\totaltime{10 min}}
 \begin{ingredients}
 60 g basil leaves 
 1/2 tsp kosher salt
@@ -20,7 +20,7 @@ zest of 1/2 lemon
 Omit lemon juice if using Pecorino Romano.
 \end{recipe}
 
-\begin{densecard}{Rich Salad Dressings}{\tag{V}\totaltime{10 min}}
+\begin{densecard}{Rich Salad Dressings}{\vegetarian\totaltime{10 min}}
 \begin{tabularx}{\textwidth}{@{}XXXXX@{}}
 \toprule
 Base & Aromatics & Sweetness & Acid & Oil \\
@@ -71,7 +71,7 @@ Omit with fatty base
 \end{steps}
 \end{densecard}
 
-\begin{recipe}{Hollandaise Sauce}{\tag{V}\totaltime{10 min}}
+\begin{recipe}{Hollandaise Sauce}{\vegetarian\totaltime{10 min}}
 \begin{ingredients}
 2 egg yolks
 1 tbsp lemon juice
@@ -90,7 +90,7 @@ Serves 2-3
 Keep the sauce warm in the double boiler, whisking occasionally, until ready to use.
 \end{recipe}
 
-\begin{recipe}{Miso-Sesame Vinaigrette}{\tag{VG}\preheat{\celsius{180}}\totaltime{10 min}}
+\begin{recipe}{Miso-Sesame Vinaigrette}{\vegetarian\preheat{\celsius{180}}\totaltime{10 min}}
 \begin{ingredients}
 2 tbsp sesame seeds
 2 cloves garlic, smashed
@@ -243,7 +243,7 @@ Makes 3/4 cup
 Huacatay can be found jarred. If unavailable, increase the cilantro to 5 tbsp.
 \end{recipe}
 
-\begin{recipe}{Warm Tomato Vinaigrette}{\tag{V}\totaltime{20 min}}
+\begin{recipe}{Warm Tomato Vinaigrette}{\vegetarian\totaltime{20 min}}
 \begin{ingredients}
 2+2 tbsp olive oil
 1 shallot, minced
@@ -267,7 +267,7 @@ Makes about 2 cups
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Blonde Balsamic Vinaigrette}{\tag{V}\totaltime{10 min}}
+\begin{recipe}{Blonde Vinaigrette}{\vegetarian\totaltime{10 min}}
 \begin{ingredients}
 1/4 cup white balsamic vinegar
 1 tbsp minced shallot
@@ -285,7 +285,7 @@ Serves 6
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Helen's Grilling Glaze}{\tag{VG}\totaltime{5 min}}
+\begin{recipe}{Helen's Grilling Glaze}{\vegetarian\totaltime{5 min}}
 \begin{ingredients}
 1 tbsp soy sauce
 1 tbsp dijon mustard
@@ -302,7 +302,7 @@ Makes 1/2 cup
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Gochujang-Ketchup Marinade}{\tag{VG}\totaltime{5 min}}
+\begin{recipe}{Gochujang-Ketchup Marinade}{\vegetarian\totaltime{5 min}}
 \begin{ingredients}
 1 tbsp minced ginger
 4 cloves garlic, minced
