--- a/soups_and_stews.tex
+++ b/soups_and_stews.tex
@@ -21,7 +21,7 @@ Serves 4
 \end{steps}
 \end{recipe}
 
-\begin{denserecipe}{Lentil Soup, World's Best}{\tag{V}\totaltime{1 h}}
+\begin{denserecipe}{Tomato Dal Soup}{\vegetarian\totaltime{1 h}}
 \begin{ingredients}
 2 tbsp coconut oil
 1 large onion, diced
@@ -48,7 +48,7 @@ Serves 6
 Check for salt before serving.
 \end{denserecipe}
 
-\begin{denserecipe}{Pork Chile Verde}{\totaltime{1 h 15 min}}
+\begin{denserecipe}{Chile Verde}{\totaltime{1 h 15 min}}
 \begin{ingredients}
 2 kg pork shoulder
 4 tomatillos, quartered
@@ -76,7 +76,7 @@ Serves 6 to 8
 \end{steps}
 \end{denserecipe}
 
-\begin{denserecipe}{Healthy Turkey Chili}{\preheat{\celsius{160}\totaltime{2 h}}}
+\begin{denserecipe}{Turkey Chili}{\preheat{\celsius{160}\totaltime{2 h}}}
 \begin{ingredients}
 1 yellow onion, chopped
 1 red bell pepper, chopped
@@ -104,7 +104,7 @@ Serves 6
 \end{steps}
 \end{denserecipe}
 
-\begin{denserecipe}{Creamy Vegan Tomato Soup}{\tag{VG}\totaltime{20 min}}
+\begin{denserecipe}{Tomato Soup}{\vegetarian\totaltime{20 min}}
 \begin{ingredients}
 1 tbsp olive oil
 1 cloves of garlic, grated
@@ -128,7 +128,7 @@ Serves 2 to 3
 Garnish with herbs and more olive oil.
 \end{denserecipe}
 
-\begin{recipe}{Lemony Asparagus Soup}{\tag{V}\totaltime{15 min}}
+\begin{recipe}{Lemony Asparagus Soup}{\vegetarian\totaltime{15 min}}
 \begin{ingredients}
 1 bunch asparagus, chopped
 2 shallots, chopped
@@ -152,7 +152,7 @@ Serves 4
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Potato-Leek Soup}{\tag{V}\totaltime{45 min}}
+\begin{recipe}{Vichyssoise}{\vegetarian\totaltime{45 min}}
 \begin{ingredients}
 2 tbsp unsalted butter
 2 large leeks
@@ -176,7 +176,7 @@ Serves 6
 Serve with sliced chives or scallions.
 \end{recipe}
 
-\begin{denserecipe}{Big Pot of Beans}{\preheat{\celsius{120}}\totaltime{7 h}}
+\begin{denserecipe}{Pot Beans}{\preheat{\celsius{120}}\totaltime{7 h}}
 \begin{ingredients}
 1 lb dried beans
 salt, olive oil
@@ -238,7 +238,7 @@ Serves 8
 salt and pepper
 3 cups chicken stock
 15 oz tomato puree
-2 cups lentils, rinsed
+2 cups brown lentils
 2 bay leaves
 \end{ingredients}
 \nextcolumn
@@ -255,7 +255,7 @@ Serves 6
 Garnish with grated pecorino or parmesan.
 \end{denserecipe}
 
-\begin{denserecipe}{Curry Broth with Tofu and Herbs}{\tag{VG}\totaltime{30 min}}
+\begin{denserecipe}{Curry Broth with Silken Tofu}{\vegetarian\totaltime{30 min}}
 \begin{ingredients}
 28 oz silken tofu, drained
 2 tbsp oil
@@ -283,7 +283,7 @@ Serves 6
 Cilantro, basil and dill work well for the herbs. Serve with lime wedges for squeezing.
 \end{denserecipe}
 
-\begin{denserecipe}{Lentil Pasta Stew}{\tag{V}\totaltime{1 h}}
+\begin{denserecipe}{Lentil Pasta Stew}{\vegetarian\totaltime{1 h}}
 \begin{ingredients}
 3 tbsp olive oil
 1 onion, chopped
@@ -291,7 +291,7 @@ Cilantro, basil and dill work well for the herbs. Serve with lime wedges for squ
 1 1/2 tsp kosher salt
 pepper
 5 cups water
-1 cup lentils
+1 cup green lentils
 3 sprigs thyme, optional
 3 bay leaves, optional
 800 g crushed tomatoes
@@ -312,7 +312,7 @@ Serves 6
 \end{steps}
 \end{denserecipe}
 
-\begin{denserecipe}{Chicken and Red Lentil Soup}{\tag{V}\totaltime{1 h}}
+\begin{denserecipe}{Chicken and Lentil Soup}{\vegetarian\totaltime{1 h}}
 \begin{ingredients}
 3 tbsp olive oil
 2 large onions, sliced
