--- a/vegetables_and_sides.tex
+++ b/vegetables_and_sides.tex
@@ -1,6 +1,6 @@
 \BeginCategoryTOC{Vegetables \& Sides}
     
-\begin{recipe}{Olive Potatoes}{\tag{V}\preheat{\celsius{225}}\totaltime{1 h}}
+\begin{recipe}{Olive Potatoes}{\vegetarian\preheat{\celsius{225}}\totaltime{1 h}}
 \begin{ingredients}
 1 kg new potatoes
 2 tbsp butter
@@ -24,7 +24,7 @@ Serves 6
 \end{steps}
 \end{recipe}
 
-\begin{denserecipe}{Healthy Imam Bayildi}{\tag{VG}\preheat{\celsius{190}}\totaltime{1 h 20 min}}
+\begin{denserecipe}{Healthy Imam Bayildi}{\vegetarian\preheat{\celsius{190}}\totaltime{1 h 20 min}}
 \begin{ingredients}
 2 large globe eggplants
 2 tbsp olive oil
@@ -53,7 +53,7 @@ Serves 4
 \end{steps}
 \end{denserecipe}
 
-\begin{recipe}{Pressure Cooker Rice and Beans}{\tag{VG}\totaltime{30 min}}
+\begin{recipe}{Pressure Cooker Rice and Beans}{\vegetarian\totaltime{30 min}}
 \begin{ingredients}
 2 tbsp oil
 1 onion, chopped
@@ -72,7 +72,7 @@ Serves 4
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Mediterranean Roast Cauliflower}{\tag{V}\preheat{\celsius{260}}\totaltime{40 min}}
+\begin{recipe}{Mediterranean Roast Cauliflower}{\vegetarian\preheat{\celsius{260}}\totaltime{40 min}}
 \begin{ingredients}
 1 cauliflower
 3+3 tbsp olive oil
@@ -123,7 +123,7 @@ Serves 8
 \end{steps}
 \end{denserecipe}
 
-\begin{recipe}{French Lentils}{\tag{VG}\totaltime{40 min}}
+\begin{recipe}{French Lentils}{\vegetarian\totaltime{40 min}}
 \begin{ingredients}
 3 tbsp olive oil
 1 onion, finely diced
@@ -145,7 +145,7 @@ Serves 6
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Creamed Spinach}{\tag{V}\totaltime{2 h}}
+\begin{recipe}{Creamed Spinach}{\vegetarian\totaltime{2 h}}
 \begin{ingredients}
 3 tbsp butter
 2 shallots, minced
@@ -171,7 +171,7 @@ Serves 4
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Pomegranate Brussels Sprouts}{\tag{VG}\preheat{\celsius{220}}\totaltime{30 min}}
+\begin{recipe}{Pomegranate Brussels Sprouts}{\vegetarian\preheat{\celsius{220}}\totaltime{30 min}}
 \begin{ingredients}
 1.5 lb brussels sprouts, halved
 3 tbsp olive oil
@@ -193,7 +193,7 @@ Serves 4
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Broccoli Aligot}{\tag{V}\totaltime{30 min}}
+\begin{recipe}{Broccoli Aligot}{\vegetarian\totaltime{30 min}}
 \begin{ingredients}
 5 to 6 cups broccoli, shaved dark green tops only (about 4 large heads)
 4 tbsp butter
@@ -235,7 +235,7 @@ Serves 6 to 8
 Serve warm or at room temperature.
 \end{recipe}
 
-\begin{recipe}{Skillet-Roasted Brussels Sprouts}{\tag{V}\totaltime{20 min}}
+\begin{recipe}{Skillet-Roasted Brussels Sprouts}{\vegetarian\totaltime{20 min}}
 \begin{ingredients}
 1 lb small brussels sprouts, halved
 5 tbsp olive oil
@@ -254,7 +254,7 @@ Serves 4
 \end{steps}
 \end{recipe}
 
-\begin{denserecipe}{Oven Ratatouille}{\tag{VG}\preheat{\celsius{200}}\totaltime{2 h}}
+\begin{denserecipe}{Oven Ratatouille}{\vegetarian\preheat{\celsius{200}}\totaltime{2 h}}
 \begin{ingredients}
 1/3 cup olive oil
 8 cloves garlic, smashed
@@ -283,7 +283,7 @@ Serves 6 to 8
 \end{steps}
 \end{denserecipe}
 
-\begin{denserecipe}{Tender Green Beans in Tomato}{\tag{VG}\preheat{\celsius{135}}\totaltime{1 h 30 min}}
+\begin{denserecipe}{Tender Green Beans in Tomato}{\vegetarian\preheat{\celsius{135}}\totaltime{1 h 30 min}}
 \begin{ingredients}
 5 tbsp olive oil
 1 onion, chopped
@@ -312,7 +312,7 @@ Serves 4 to 6
 \end{steps}
 \end{denserecipe}
 
-\begin{recipe}{Roasted Balsamic Beets}{\tag{V}\preheat{\celsius{190}}\totaltime{1 h 30 min}}
+\begin{recipe}{Balsamic Beets}{\vegetarian\preheat{\celsius{190}}\totaltime{1 h 30 min}}
 \begin{ingredients}
 1 1/2 lb beets
 olive oil
