--- a/joulu.tex
+++ b/joulu.tex
@@ -1,6 +1,6 @@
 \BeginCategoryTOC{Joulu}
 
-\begin{recipe}{Extra-Light and Foamy Eggnog}{\tag{V}\totaltime{15 min}}
+\begin{recipe}{Extra-Light and Foamy Eggnog}{\vegetarian\totaltime{15 min}}
 \begin{ingredients}
 4 eggs, separated
 70 g sugar
@@ -22,7 +22,7 @@ For more complexity, age in refrigerator for up to a year and blend with a fresh
 \end{recipe}
 
 % To be seen if this is solid enough to withstand baking
-\begin{recipe}{Figgy Christmas Star Filling}{\tag{VG}\totaltime{30 min}}
+\begin{recipe}{Figgy Christmas Star Filling}{\vegetarian\totaltime{30 min}}
 \begin{ingredients}
 200 g dried figs, \ibreak roughly chopped
 3 dl water
@@ -63,7 +63,7 @@ Serves 12
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Rice Porridge}{\tag{V}\totaltime{45 min}}
+\begin{recipe}{Rice Porridge}{\vegetarian\totaltime{45 min}}
 \begin{ingredients}
 1 1/2 dl short grain rice
 8 dl whole milk
@@ -79,7 +79,7 @@ Serves 2
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Dried Fruit Soup}{\tag{VG}\totaltime{20 min}}
+\begin{recipe}{Dried Fruit Soup}{\vegetarian\totaltime{20 min}}
 \begin{ingredients}
 250 g dried fruits, such as raisins or apricots
 7 dl water
@@ -99,7 +99,7 @@ Serves 4
 \end{steps}
 \end{recipe}
 
-\begin{denserecipe}{Rutabaga Casserole}{\tag{V}\preheat{\celsius{180}}\totaltime{2 h 40 min}}
+\begin{denserecipe}{Rutabaga Casserole}{\vegetarian\preheat{\celsius{180}}\totaltime{2 h 40 min}}
 \begin{ingredients}
 1 kg rutabagas, peeled and roughly diced
 2 dl heavy cream
@@ -123,7 +123,7 @@ Serves 8
 \end{steps}
 \end{denserecipe}
 
-\begin{recipe}{Creamy Mushroom Salad}{\tag{V}\totaltime{1 h}} % joulu
+\begin{recipe}{Creamy Mushroom Salad}{\vegetarian\totaltime{1 h}} % joulu
 \begin{ingredients}
 1 lb mixed mushrooms, finely diced
 1 shallot, minced
@@ -145,7 +145,7 @@ Serves 8
 \end{steps}
 \end{recipe}
 
-\begin{denserecipe}{Coastal Bread}{\tag{V}\preheat{\celsius{180}}\totaltime{4 h}}
+\begin{denserecipe}{Coastal Bread}{\vegetarian\preheat{\celsius{180}}\totaltime{4 h}}
 \begin{ingredients}
 25 g instant yeast, about 3 tbsp
 3 dl beer malts
@@ -171,7 +171,7 @@ Makes enough for 3 pans of 1 1/2 liters each
 Coastal bread is at its best after 1 to 2 days.
 \end{denserecipe}
 
-\begin{recipe}{Glögi Syrup}{\tag{VG}\totaltime{40 min}}
+\begin{recipe}{Glögi Syrup}{\vegetarian\totaltime{40 min}}
 \begin{ingredients}
 1 cup water
 2 cups sugar
@@ -194,7 +194,7 @@ Will keep in refrigerator for up to 6 months.
 Other spices to try: nutmeg vanilla allspice pink\ijoin{}peppercorns bay\ijoin{}leaves juniper\ijoin{}berries
 \end{recipe}
 
-\begin{recipe}{Piimäjuusto}{\tag{V}\totaltime{7 hours}}
+\begin{recipe}{Piimäjuusto}{\vegetarian\totaltime{7 hours}}
 \begin{ingredients}
 1 1/2 l whole milk
 1/2 l piimä or kefir
@@ -214,7 +214,7 @@ Other spices to try: nutmeg vanilla allspice pink\ijoin{}peppercorns bay\ijoin{}
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Mustard}{\tag{V}\totaltime{20 min}}
+\begin{recipe}{Mustard}{\vegetarian\totaltime{20 min}}
 \begin{ingredients}
 100 g mustard powder
 1 dl sugar
