--- a/main.tex
+++ b/main.tex
@@ -185,7 +185,6 @@
 }
 \makeatother
 
-
 \newcommand{\RemoveAccents}[1]{%
   \StrSubstitute{#1}{ö}{o}[\tmpa]%
   \StrSubstitute{\tmpa}{ä}{a}[\tmpb]%
@@ -203,7 +202,9 @@
   \StrSubstitute{\tmpm}{Ó}{O}[\tmpn]%
   \StrSubstitute{\tmpn}{ñ}{n}[\tmpo]%
   \StrSubstitute{\tmpo}{Ñ}{N}[\tmpp]%
-  \StrSubstitute{\tmpp}{ù}{u}[\tmpremoveaccents]%
+  \StrSubstitute{\tmpp}{ù}{u}[\tmpq]%
+  \StrSubstitute{\tmpq}{è}{e}[\tmpr]%
+  \StrSubstitute{\tmpr}{û}{u}[\tmpremoveaccents]%
 }
 
 \newcommand{\SanitizeSlug}[1]{%
@@ -317,6 +318,7 @@
 
 \newcommand{\tag}[1]{\hspace{1em}#1}
 \newcommand{\symboltag}[2]{\tag{#1\hspace{0.3em}#2}}
+\newcommand{\vegetarian}{\raisebox{-0.08em}{\includegraphics[scale=0.09]{symbols/vegetarian.eps}}}
 \newcommand{\totaltime}[1]{\symboltag{\raisebox{-0.09em}{\small\includegraphics[scale=0.07]{symbols/stopwatch.eps}}}{#1}}
 \newcommand{\preheat}[1]{\symboltag{\raisebox{-0.09em}{\includegraphics[scale=0.09]{symbols/oven.eps}}}{#1}}
 
@@ -383,7 +385,7 @@ This is a collection of recipes that I want to have easily referenceable in my k
 % ============================
 \iffalse
 
-\begin{recipe}{}{\tag{}\preheat{}\totaltime{}}
+\begin{recipe}{}{\preheat{}\totaltime{}}
 \begin{ingredients}
 \end{ingredients}
 \nextcolumn
