--- a/desserts.tex
+++ b/desserts.tex
@@ -180,7 +180,7 @@ Serves 8
 sugar
 splash of dark rum
 1/2 l coconut milk
-1/2 tsp vanilla extract
+vanilla bean, scraped, or 1/2 tsp vanilla extract
 30 g cornstarch
 \end{ingredients}
 \nextcolumn
@@ -189,7 +189,7 @@ Serves 2
     \item Slice off top third of bananas to make boats
     \item Pull out flesh and caramelize in a pan with a sprinkling of sugar
     \item Deglaze with rum and optionally flambe
-    \item Add coconut milk and vanilla extract
+    \item Add coconut milk and vanilla
     \item Mash bananas and simmer for 5 minutes
     \item Pass through a sieve
     \item Whisk in cornstarch and cook until thickened
